:clipboard: Bump up `@umm/setting_core`

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   ],
   "dependencies": {
     "@umm/command_runner": "umm-projects/command_runner#^1.0.0",
-    "@umm/environment_setting": "umm-projects/environment_setting#^1.0.0",
+    "@umm/setting_core": "umm-projects/setting_core#^2.0.0",
     "@umm/scripts": "umm-projects/scripts#^1.0.0",
     "@umm/unirx": "umm-projects/unirx#^1.0.0"
   },
