--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@umm/git",
+  "name": "@umm/git_cli",
   "version": "3.1.3",
   "description": "git command wrapper for Unity",
-  "homepage": "https://github.com/umm/git",
+  "homepage": "https://git_clihub.com/umm/git_cli",
   "bugs": {
-    "url": "https://github.com/umm/git/issues"
+    "url": "https://git_clihub.com/umm/git_cli/issues"
   },
   "scripts": {
     "umm:init": "umm-init",
@@ -18,7 +18,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git@github.com:umm/git"
+    "url": "git@github.com:umm/git_cli"
   },
   "files": [
     "Assets",
